--- a/src/assets/sass/components/layout/_page.scss
+++ b/src/assets/sass/components/layout/_page.scss
@@ -1,14 +1,34 @@
 .page-container {
-    position: relative;
-
     .line-transition {
-        position: absolute;
+        position: fixed;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
         transform: translateX(-100%);
+        background-color: $primary-colour;
         z-index: $page-transition-layer;
+
+        .line {
+            position: absolute;
+            left: 0;
+            right: 0;
+            width: 100%;
+            height: 34%;
+
+            &.yellow-gradient {
+                top: 0;
+            }
+
+            &.pink-gradient {
+                top: 50%;
+                transform: translateY(-50%);
+            }
+
+            &.blue-gradient {
+                bottom: 0;
+            }
+        }
     }
 }
 
