--- a/src/assets/sass/components/layout/_page.scss
+++ b/src/assets/sass/components/layout/_page.scss
@@ -1,18 +1,27 @@
 .page-container {
     .line-transition {
         display: flex;
-        flex-direction: column;
         position: fixed;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
-        transform: translateX(-100%);
+        transform: translateY(-100%);
         z-index: $page-transition-layer;
+
+        @media screen and (min-width: $tablet-breakpoint){
+            transform: translateX(-100%);
+            flex-direction: column;
+        }
 
         .line {
             flex: 1 1 34%;
-            width: 100%;
+            margin: 0 -0.125rem;
+
+            @media screen and (min-width: $tablet-breakpoint){
+                width: 100%;
+                margin: -0.125rem 0;
+            }
         }
     }
 }
@@ -37,7 +46,11 @@
 .page-transition-leave-to, .page-transition-enter {
     .line-transition {
         .line {
-            transform: translateX(100%);
+            transform: translateY(100%);
+
+            @media screen and (min-width: $tablet-breakpoint){
+                transform: translateX(100%);
+            }
         }
     }
 }
@@ -45,7 +58,11 @@
 .page-transition-leave {
     .line-transition {
         .line {
-            transform: translateX(0);
+            transform: translateY(0);
+
+            @media screen and (min-width: $tablet-breakpoint){
+                transform: translateX(0);
+            }
         }
     }
 }
@@ -53,7 +70,11 @@
 .page-transition-enter-to {
     .line-transition {
         .line {
-            transform: translateX(200%);
+            transform: translateY(200%);
+
+            @media screen and (min-width: $tablet-breakpoint){
+                transform: translateX(200%);
+            }
         }
     }
 }
