--- a/src/assets/sass/components/layout/_footer.scss
+++ b/src/assets/sass/components/layout/_footer.scss
@@ -129,6 +129,11 @@ footer {
             @include set-font(primary, medium);
             font-size: 1.25rem;
             line-height: 1.1;
+            transition: color 0.3s ease;
+
+            &:hover, &:focus {
+                color: $yellow;
+            }
         }
     }
 }
