updated button styles to have hover effect + updated submit buttons

--- a/src/assets/sass/components/contact/_form.scss
+++ b/src/assets/sass/components/contact/_form.scss
@@ -77,7 +77,7 @@ $checkbox-grid-gutter: 1.125rem;
     .submit-container {
         margin-top: 1rem;
 
-        input[type="submit"] {
+        [type="submit"] {
             display: block;
             margin-left: auto;
         }
