--- a/src/assets/sass/base/_variables.scss
+++ b/src/assets/sass/base/_variables.scss
@@ -24,6 +24,7 @@ $image-box-shadow: 10px 10px 40px -20px rgba($ocean-blue, 0.6);
 
 /* Z-Index Layers */
 $background-layer: -1;
+$base-layer: 0;
 $content-layer: 1;
 $header-layer: 2;
 $page-transition-layer: 3;
