--- a/src/assets/sass/modules/_buttons.scss
+++ b/src/assets/sass/modules/_buttons.scss
@@ -1,8 +1,15 @@
+$button-color: $white;
+$button-background: $primary-colour;
+$button-border-width: 0.125rem;
+$button-border-radius: 1.25rem;
+$button-transition: 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+
 %button-reset {
     appearance: none;
     @include set-font(primary);
     text-decoration: none;
     background-color: transparent;
+    -webkit-tap-highlight-color: transparent;
     cursor: pointer;
 
     &:hover, &:focus, &:active{
@@ -12,9 +19,11 @@
 
 %button-base {
     @extend %button-reset;
+    position: relative;
     display: inline-block;
     padding: 0.5rem 1.875rem;
-    border-radius: 1.25rem;
+    border-radius: $button-border-radius;
+    overflow: hidden;
 
     font-size: $body-font-size;
     line-height: $body-line-height;
@@ -27,6 +36,37 @@ button {
 
 .button {
     @extend %button-base;
-    color: $white;
-    background-color: $primary-colour;
+    color: $button-color;
+    background-color: transparent;
+    border: $button-border-width solid $button-background;
+    transition: color $button-transition;
+
+    &:hover, &:focus, &:active{
+        color: $button-background;
+
+        &::after {
+            transform: scale(0, 1);
+            transform-origin: right center;
+        }
+    }
+
+    &::after {
+        content: '';
+        position: absolute;
+        top: -$button-border-width;
+        left: -$button-border-width;
+        right: -$button-border-width;
+        bottom: -$button-border-width;
+        transform: scale(1, 1);
+        transform-origin: left center;
+        transition: transform $button-transition;
+        background-color: $button-background;
+        z-index: $background-layer;
+    }
+
+    span {
+        position: relative;
+        display: inline-block;
+        z-index: $content-layer;
+    }
 }
