--- a/src/assets/sass/components/faq/_accordion.scss
+++ b/src/assets/sass/components/faq/_accordion.scss
@@ -22,6 +22,22 @@
         }
     }
 
+    &.open {
+        .cta-link {
+            &::after {
+                transform: rotate(90deg);
+            }
+        }
+
+        .accordion-content {
+            max-height: 62.5rem;
+
+            p {
+                animation: animateIn 0.9s ease forwards;
+            }
+        }
+    }
+
     h3 {
         @include set-font(secondary);
         font-size: 1.5rem;
@@ -39,18 +55,18 @@
         }
     }
 
+    .cta-link {
+        &::after {
+            transform-origin: center;
+            transform: rotate(0);
+            transition: transform 0.9s ease;
+        }
+    }
+
     .accordion-content {
         max-height: 0;
         overflow: hidden;
         transition: max-height 0.9s ease;
-
-        &.open {
-            max-height: 62.5rem;
-
-            p {
-                animation: animateIn 0.9s ease forwards;
-            }
-        }
 
         .content-container {
             margin-top: 2.5rem;
