--- a/src/assets/sass/utils/_mixins.scss
+++ b/src/assets/sass/utils/_mixins.scss
@@ -62,6 +62,7 @@
     &::after {
         background-color: $yellow;
         transform: translateX(-100%);
+        margin: 0;
         transition: transform 0.3s ease;
     }
 
@@ -81,6 +82,6 @@
 
     &::after {
         content: ">";
-        padding-left: 0.625rem;
+        margin-left: 0.625rem;
     }
 }
