--- a/src/assets/sass/components/our-story/_hero.scss
+++ b/src/assets/sass/components/our-story/_hero.scss
@@ -17,7 +17,7 @@ $our-story-gradient-space: 3.5rem;
                 max-width: 23.5rem;
                 text-align: left;
                 padding-top: 4.125rem;
-                padding-bottom: 0;
+                padding-bottom: 6.25rem;
                 padding-right: 2rem;
             }
 
