--- a/src/assets/sass/components/layout/_footer.scss
+++ b/src/assets/sass/components/layout/_footer.scss
@@ -84,23 +84,14 @@ footer {
                     }
 
                     [type="submit"] {
-                        @extend %button-reset;
                         @include set-font(primary, bold);
                         width: 100%;
                         padding: 0.6875rem 1.125rem;
-                        border-color: $white;
+                        border: $button-border-width solid $white;
                         border-radius: 0;
 
                         @media screen and (min-width: $tablet-breakpoint){
                             width: auto;
-                        }
-
-                        &:hover, &:focus, &:active{
-                            color: $white;
-                        }
-
-                        &::after {
-                            z-index: $base-layer;
                         }
                     }
                 }
