--- a/src/assets/sass/components/home/_useCase.scss
+++ b/src/assets/sass/components/home/_useCase.scss
@@ -46,8 +46,8 @@ $offset-bottom: 2.25rem;
 
         .image-container, .content-container {
             @media screen and (min-width: $tablet-breakpoint){
-                flex: 0 1 28rem;
-                max-width: 28rem;
+                flex: 0 1 50%;
+                max-width: 50%;
             }
         }
 
@@ -81,11 +81,12 @@ $offset-bottom: 2.25rem;
 
         .content-container {
             @media screen and (min-width: $tablet-breakpoint){
-                padding-left: 5.875rem;
+                padding-left: 4.75rem;
                 padding-bottom: 1.5rem;
             }
 
             h3 {
+                color: $throwback-blue;
                 font-size: 1.375rem;
                 line-height: 1;
                 margin-bottom: 2rem;
