--- a/src/assets/sass/modules/_typography.scss
+++ b/src/assets/sass/modules/_typography.scss
@@ -12,19 +12,19 @@ h1, .h1 {
     line-height: 2.875rem;
 
     @media screen and (min-width: $tablet-breakpoint){
-        font-size: 3.5rem;
-        line-height: 4rem;
+        font-size: 4rem;
+        line-height: 4.5rem;
     }
 }
 
 h2, .h2 {
-    @include set-font(primary, medium);
-    font-size: 1.375rem;
-    line-height: 1.75rem;
+    @include set-font(primary, bold);
+    font-size: 1.75rem;
+    line-height: 2.125rem;
 
     @media screen and (min-width: $tablet-breakpoint){
-        font-size: 2.375rem;
-        line-height: 3.125rem;
+        font-size: 3.25rem;
+        line-height: 4.25rem;
     }
 }
 
