--- a/src/assets/sass/components/how-it-works/_what-we-do.scss
+++ b/src/assets/sass/components/how-it-works/_what-we-do.scss
@@ -80,6 +80,7 @@
             }
 
             h3 {
+                color: $throwback-blue;
                 font-size: 1.5rem;
                 line-height: 2rem;
                 margin-bottom: 1.5rem;
