--- a/src/assets/sass/components/our-story/_hero.scss
+++ b/src/assets/sass/components/our-story/_hero.scss
@@ -72,22 +72,6 @@ $our-story-gradient-space: 3.5rem;
                 z-index: $background-layer;
             }
         }
-
-        &::after {
-            @media screen and (min-width: $tablet-breakpoint){
-                content: '';
-                position: absolute;
-                top: 2rem;
-                right: 100%;
-                transform: translateX(100%);
-                width: 6.875rem;
-                height: 7.25rem;
-                background-image: url('./assets/images/stripe-accent-vertical.png');
-                background-repeat: no-repeat;
-                background-size: cover;
-                background-position: center;
-            }
-        }
     }
 
     .hero-gradient {
@@ -105,6 +89,23 @@ $our-story-gradient-space: 3.5rem;
             background-size: cover;
             background-position: center;
             z-index: $background-layer;
+        }
+    }
+
+    .stripe-accent {
+        display: none;
+
+        @media screen and (min-width: $tablet-breakpoint){
+            display: block;
+            position: absolute;
+            top: 2rem;
+            right: calc(100% - 6.875rem);
+            width: 6.875rem;
+            height: 7.25rem;
+            background-image: url('./assets/images/stripe-accent-vertical.png');
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
         }
     }
 }
