--- a/src/assets/sass/components/home/_features.scss
+++ b/src/assets/sass/components/home/_features.scss
@@ -105,7 +105,7 @@ $feature-gutter: 0.625rem;
         @media screen and (min-width: $tablet-breakpoint){
             display: block;
             position: absolute;
-            top: 5rem;
+            top: 45%;
             left: -1rem;
             width: 4.875rem;
             height: 12.5rem;
